--- a/package.json
+++ b/package.json
@@ -3,14 +3,25 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/css": "^11.10.5",
+    "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
+    "@reduxjs/toolkit": "^1.9.1",
     "axios": "^1.2.2",
     "bootstrap": "^5.2.3",
+    "firebase": "^9.15.0",
     "http-proxy-middleware": "^2.0.6",
+    "nodemon": "^2.0.20",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.7.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^8.0.5",
     "react-router": "^6.6.1",
     "react-router-dom": "^6.6.1",
-    "react-scripts": "5.0.1"
+    "react-scripts": "5.0.1",
+    "react-spinners": "^0.13.7",
+    "redux-persist": "^6.0.0",
+    "styled-components": "^5.3.6"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -37,6 +48,7 @@
     ]
   },
   "devDependencies": {
+    "sass": "^1.57.1",
     "tailwindcss": "^3.2.4"
   }
 }
